--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                             <a href="list.html"><img src="upload/focus1.jpg" alt="前往列表頁" title="前往列表頁"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="list.html"></a><img src="upload/focus2.jpg" alt="前往列表頁" title="前往列表頁"></a>
+                            <a href="list.html"><img src="upload/focus2.jpg" alt="前往列表頁" title="前往列表頁"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="list.html"></a><img src="upload/focus3.jpg" alt="前往列表頁" title="前往列表頁"></a>
+                            <a href="list.html"><img src="upload/focus3.jpg" alt="前往列表頁" title="前往列表頁"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="list.html"></a><img src="upload/focus4.jpg" alt="前往列表頁" title="前往列表頁"></a>
+                            <a href="list.html"><img src="upload/focus4.jpg" alt="前往列表頁" title="前往列表頁"></a>
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
