--- a/index.html
+++ b/index.html
@@ -58,31 +58,41 @@
     <header class="header">
         <div class="w">
 
-            <div class="logo">
-                <h1><a href="index.html" title="品優購商城">品優購商城</a></h1>
-            </div>
-
             <div class="search">
-                <input type="search" name="search" id="" placeholder="請搜索內容...">
-                <button type="button">搜尋</button>
-            </div>
+                <div class="search-m">
+                    <div class="logo">
+                        <h1><a href="index.html" title="品優購商城">品優購商城</a></h1>
+                    </div>
+            
+                    <div class="form">
+                        <input type="search" name="search" id="" placeholder="請搜索內容...">
+                        <button type="button">搜尋</button>
+                    </div>
 
-            <div class="hotwords">
-                <a href="#">女生衣著</a>
-                <a href="#">男生衣著</a>
-                <a href="#">美食、伴手禮</a>
-                <a href="#">居家生活</a>
-                <a href="#">女生配件</a>
-                <a href="#">電玩遊戲</a>
-                <a href="#">男女鞋</a>
-            </div>
+                    <div class="hotwords">
+                        <a href="#">女生衣著</a>
+                        <a href="#">男生衣著</a>
+                        <a href="#">美食、伴手禮</a>
+                        <a href="#">居家生活</a>
+                        <a href="#">女生配件</a>
+                        <a href="#">電玩遊戲</a>
+                        <a href="#">男女鞋</a>
+                    </div>
 
-            <a href="#" class="shopcar">我的購物車
-                <div class="count">88</div>
-            </a>
+                    <a href="#" class="shopcar">我的購物車
+                        <div class="count">88</div>
+                    </a>
+                </div>
+            </div>
 
         </div>
     </header>
+
+
+    <div class="sidebar">
+        <a href="list.html"><img src="upload/bt.jpg" alt="" title="前往列表頁"></a>
+        <a href="javascript:;" class="top">Top</a> 
+    </div>
 
 
     <nav class="nav">
@@ -301,10 +311,10 @@
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <a href="javascript:;"><img src="upload/floor-bg2.jpg" alt=""></a> 
+                                        <a href="list.html" alt="前往列表頁" title="前往列表頁"><img src="upload/floor-bg2.jpg" alt=""></a> 
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="javascript:;"><img src="upload/floor-bg.jpg" alt=""></a>
+                                        <a href="list.html" alt="前往列表頁" title="前往列表頁"><img src="upload/floor-bg.jpg" alt=""></a>
                                     </div>
                                 </div>
                                 <div class="swiper-button-next"></div>
